fixed navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,6 @@ h1, h2 {
 }
 
 h1, h2, h3, h4 {
-    padding-top: 0px;
     margin-top: 0px;
 }
 
@@ -100,6 +99,10 @@ h1, h2, h3, h4 {
     color: #FA6900;
 }
 
+.white-space {
+    margin-bottom: 3em;
+}
+
 .page {
     background-color: white; 
     padding: 5em 15%; 
@@ -150,6 +153,13 @@ img {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+ul {
+    margin-bottom: 1em;
+}
+li {
+    margin-bottom: 0.5em;
 }
 
 [class*="col-"] {
